# patchwarden

./: .gitignore  LOGO.md  README.md  README_OUTLINE.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-static-analysis/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md
.planning/phases/03-behavior-analysis/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
.planning/phases/04-reputation-verdict/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md
.planning/phases/05-demo-submit/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md
data/signatures/: signatures.json
demo/: build_sample.sh  recording-checklist.md  storyboard.md
demo/samples/suspicious_mod_src/: README.md
jarspect/: __init__.py
mod_sentinel/: __init__.py
src/: main.rs
src/jarspect/: __init__.py  settings.py
src/mod_sentinel/: __init__.py  settings.py
tests/: test_behavior_agent_parsing.py  test_behavior_agent_stub.py  test_behavior_contract.py  test_decompiler.py  test_health.py  test_intake.py  test_jar_classes.py  test_llm_json_extract.py  test_patterns.py  test_reputation.py  test_scan_behavior.py  test_scan_full.py  test_scan_static.py  test_signatures.py  test_upload.py  test_verdict.py
(+68 files in other folders)
